--- a/style2.css
+++ b/style2.css
@@ -63,7 +63,8 @@ html {
 }
 
 .cta-button:hover {
-    background-color: #00A642;
+    background-color: white;
+    color: #00C853;
 }
 
 /* About Section */
@@ -189,13 +190,28 @@ nav a {
     margin-right: 20px; /* Adjust this value to control the spacing */
     text-decoration: none;
     padding: 10px; /* Optional padding for better spacing within the link */
-
-    
 }
 
 nav a:last-child {
     margin-right: 0; /* Ensures no extra space after the last link */
 }
 
+/* Mobile Devices */
+@media (max-width: 420px) {
+    .hero-section {
+        background-image: url("darker_image_mob.png"); /* Mobile-specific background image */
+        background-size: cover;
+        background-position: center;
+    }
+}
 
 
+
+/* Desktops and Larger Screens */
+@media (min-width: 1280px) {
+    .hero-section {
+        background-image: url("bg2.png"); /* Desktop-specific background image */
+        background-size: cover;
+        background-position: center;
+    }
+}
