--- a/style2.css
+++ b/style2.css
@@ -17,7 +17,7 @@ html {
 
 .hero-section {
     height: 100vh; /* Full viewport height */
-    background-image: url("darker_image.png"); /* Replace with your image path */
+    background-image: url("bg2.png"); /* Replace with your image path */
     background-size: cover; /* Make sure the image covers the entire section */
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Prevent image repetition */
